--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 PORT=5000
 DB_NAME=matrix
 DB_USER=root
-DB_PASSWORD=root
-DB_HOST=127.0.0.1
-DB_PORT=5432
+##DB_PASSWORD=root
+##DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_PASSWORD=08129391Slav-12345678
+DB_HOST=62.113.106.11
 SECRET_KEY=random_key
