--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@ PORT=5000
 DB_NAME=matrix
 DB_USER=root
 DB_PASSWORD=08129391Slav-12345678
-DB_HOST=62.113.106.11
+DB_HOST=127.0.0.1
 DB_PORT=3306
 ##DB_PASSWORD=08129391Slav-12345678
+##DB_HOST=62.113.106.11
 ##DB_PORT=3306
 SECRET_KEY=random_key
